--- a/env.properties
+++ b/env.properties
@@ -2,8 +2,8 @@
 app.name=MyApp
 app.logo=favicon.ico
 app.host=localhost
-app.allowHttps=yes
-app.allowHttp=no
+app.allowHttps=no
+app.allowHttp=yes
 app.httpsport=443
 app.httpport=8080
 
